perfectpixel для index

--- a/source/index.html
+++ b/source/index.html
@@ -1,113 +1,124 @@
-<!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body class="page">
-    <header class="page__header page-header">
-      <nav class="page-header__nav page-header-nav">
-        <a class="page-header__logo logo">
-          <div class="logo__image"></div>
-        </a>
-        <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
-        <ul class="page-header-nav__list site-list site-list--left">
-          <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px">Главная</a></li>
-          <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="photo.html">Фото и видео</a></li>
-        </ul>
-        <ul class="page-header-nav__list site-list site-list--right">
-          <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="form.html">Форма отзыва</a></li>
-          <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href ="#">html Academy</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="page__main page-main">
-      <h1 class="visually-hidden">Седона</h1>
-      <header class="page-main__header page-main-header">
-        <div class="page-main__promo promo">
-          <div class="promo__img"></div>
-        </div>
-          <h2 class="page-main-header__title text--weight-bold text--size--medium text--line-height--26px">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-          <p class="page-main-header__text text--weight-normal text--size--small text--line-height--26px"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-      </header>
-      <section class="page-main__content page-main-content">
-        <h2 class="visually-hidden">Причины для посещения</h2>
-        <section class="page-main-content__reason reason reason--reason-first">
-          <div class="reason__content reason__content--background-blue">
-            <h3 class="reason__title reason__item__title  reason__title--triangle text--weight-normal text--size--large text--line-height--10px">Настоящий городок</h3>
-            <span class="reason__num text--weight-normal text--size--small text--line-height--15px">№1</span>
-            <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          </div>
-          <div class="reason__image reason__image--image-reason-first"></div>
-        </section>
-        <section class="features">
-          <div class="features__item">
-            <h3 class="feature__title text--weight-bold text--size--medium text--line-height--26px">Жилье</h3>
-            <p class="feature__text text--weight-normal text--size--small text--line-height--21px">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </div>
-          <div class="features__item">
-            <h3 class="feature__title text--weight-bold text--size--medium text--line-height--26px">Еда</h3>
-            <p class="feature__text text--weight-normal text--size--small text--line-height--21px">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </div>
-          <div class="features__item">
-            <h3 class="feature__title text--weight-bold text--size--medium text--line-height--26px">Сувениры</h3>
-            <p class="feature__text text--weight-normal text--size--small text--line-height--21px">Не только китайского, но и местного производства!</p>
-          </div>
-        </section>
-        <section class="page-main-content__reason reason reason--reason-second">
-          <div class="reason__content reason__content--background-blue">
-            <h3 class="reason__title text--weight-normal text--size--large text--line-height--10px">Там есть Мост Дьявола</h3>
-            <div class="reason__num text--weight-normal text--size--small text--line-height--15px">№2</div>
-            <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          </div>
-          <div class="reason__image reason__image--image-reason-second"></div>
-        </section>
-        <section class="page-main-content__reasons-without-photo reasons-without-photo">
-          <ul class="reasons-without-photo__list reasons-list">
-            <li class="reasons-list__item reason reason--reason-third">
-              <div class="reason__content reason__content--without-photo">
-                <h3 class="reason__title text--weight-normal text--size--large text--line-height--10px">Небольшая площадь</h3>
-                <span class="reason__num text--weight-normal text--size--small text--line-height--15px">№3</span>
-                <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Все интересные места находятся очень близко</p>
-              </div>
-            </li>
-            <li class="reasons-list__item reason reason--reason-fourth">
-              <div class="reason__content reason__content--without-photo">
-                <h3 class="reason__title text--weight-normal text--size--large text--line-height--10px">Красивая дорога</h3>
-                <span class="reason__num text--weight-normal text--size--small text--line-height--15px">№4</span>
-                <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-              </div>
-            </li>
-            <li class="reasons__item reason reason--reason-fifth">
-              <div class="reason__content reason__content--without-photo">
-                <h3 class="reason__title text--weight-normal text--size--large text--line-height--10px">Мало туристов</h3>
-                <span class="reason__num text--weight-normal text--size--small text--line-height--15px">№5</span>
-                <p class="reason__text text--weight-normal text--size--small text--line-height--21px">Большинство едет в Гранд Каньон и толпится там</p>
-              </div>
-            </li>
-          </ul>
-        </section>
-      </section>
-      <section class="page-main__hotels-searching hotels-searching">
-        <h3 class="hotels-searching__title text--weight-bold text--size--medium text--line-height--26px">Заинтересовались?</h3>
-        <p class="hotels-searching__text text--weight-normal text--size--small text--line-height--24px">Укажите предполагаемые даты поездки,
-          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button text--weight-bold text--size--large text--line-height--26px" href="hotels.html">Найти гостиницу</a>
-        <div class="map">
-        </div>
-      </section>
-    </main>
-    <footer class="page__footer page-footer">
-      <span class="page-footer__hashtag-sedona text--weight-bold text--size--large text--line-height--26px">#VISITSEDONA</span>
-      <ul class="page-footer__social-networks social-networks">
-        <li class="social-networks__item"><a class="social-networks--twitter" href="https://twitter.com"><span class="visually-hidden">Седона в Твиттере</span></a></li>
-        <li class="social-networks__item"><a class="social-networks--fb" href="https://facebook.com"><span class="visually-hidden">Седона в Фэйсбук</span></a></li>
-        <li class="social-networks__item"><a class="social-networks--youtube" href="https://youtube.com"><span class="visually-hidden">Седона на Youtube</span></a></li>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body class="page">
+  <header class="page__header page-header">
+    <nav class="page-header__nav page-header-nav">
+      <a class="page-header__logo logo">
+        <div class="logo__image"></div>
+      </a>
+      <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
+      <ul class="page-header-nav__list site-list site-list--left">
+        <li class="site-list__item">
+          <a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge">Главная</a></li>
+        <li class="site-list__item">
+          <a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="photo.html">Фото и видео</a></li>
       </ul>
-      <p class="page-footer__powered-by powered-by text--weight-normal text--size--small text--line-height--26px">Разработано
-        <a class="powered-by__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
-    </footer>
-  </body>
+      <ul class="page-header-nav__list site-list site-list--right">
+        <li class="site-list__item">
+          <a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="form.html">Форма отзыва</a></li>
+        <li class="site-list__item">
+          <a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="#">html Academy</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="page__main page-main">
+    <h1 class="visually-hidden">Седона</h1>
+    <header class="page-main__header page-main-header">
+      <div class="page-main__promo promo">
+        <div class="promo__img"></div>
+      </div>
+      <h2 class="page-main-header__title text text--weight-bold text--size--medium text--line-height--large">
+            Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="page-main-header__text text text--weight-normal text--size--small text--line-height--large">
+        Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    </header>
+    <section class="page-main__content page-main-content">
+      <h2 class="visually-hidden">Причины для посещения</h2>
+      <section class="page-main-content__reason reason reason--reason-first">
+        <div class="reason__content reason__content--background-blue">
+          <h3 class="reason__title reason__item__title  reason__title--triangle text text--weight-bold text--size--medium text--line-height--large">Настоящий городок</h3>
+          <span class="reason__num text text--weight-normal text--size--small text--line-height--light">№1</span>
+          <p class="reason__text text text--weight-normal text--size--small text--line-height--medium">Седона не аттракцион для туристов, там течет своя жизнь</p>
+        </div>
+        <div class="reason__image reason__image--image-reason-first"></div>
+      </section>
+      <section class="features">
+        <h2 class="visually-hidden">Особенности</h2>
+        <ul class="features__list">
+          <li class="features__item">
+            <h3 class="features__title features__title--motel-icon text text--weight-bold text--size--medium text--line-height--large">Жилье</h3>
+            <p class="features__text text text--weight-normal text--size--small text--line-height--medium">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="features__item features__item--souvenir">
+            <h3 class="features__title features__title--souvenir-icon text text--weight-bold text--size--medium text--line-height--large">Сувениры</h3>
+            <p class="features__text features__text--souvenir text text--weight-normal text--size--small text--line-height--medium">Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="features__item features__item--eat">
+            <h3 class="features__title features__title--burger-icon text text--weight-bold text--size--medium text--line-height--large">Еда</h3>
+            <p class="features__text text text--weight-normal text--size--small text--line-height--medium">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="page-main-content__reason reason reason--reason-second">
+        <div class="reason__content reason__content--background-blue">
+          <h3 class="reason__title text text--weight-bold text--size--medium text--line-height--large">Там есть Мост Дьявола</h3>
+          <div class="reason__num text text--weight-normal text--size--small text--line-height--light">№2</div>
+          <p class="reason__text reason__text--reason-second text text--weight-normal text--size--small text--line-height--medium">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        </div>
+        <div class="reason__image reason__image--image-reason-second"></div>
+      </section>
+      <section class="page-main-content__reasons-without-photo reasons-without-photo">
+        <ul class="reasons-without-photo__list reasons-list">
+          <li class="reasons-list__item reason reason--reason-third">
+            <div class="reason__content reason__content--without-photo">
+              <h3 class="reason__title reason__title--without-photo text text--weight-bold text--size--medium text--line-height--large">Небольшая площадь</h3>
+              <span class="reason__num reason__num--without-photo text text--weight-normal text--size--small text--line-height--light">№3</span>
+              <p class="reason__text reason__text--without-photo text text--weight-normal text--size--small text--line-height--medium">Все интересные места находятся очень близко</p>
+            </div>
+          </li>
+          <li class="reasons-list__item reason reason--reason-fourth">
+            <div class="reason__content reason__content--without-photo">
+              <h3 class="reason__title reason__title--without-photo text text--weight-bold text--size--medium text--line-height--large">Красивая дорога</h3>
+              <span class="reason__num reason__num--without-photo text text--weight-normal text--size--small text--line-height--light">№4</span>
+              <p class="reason__text reason__text--without-photo text text--weight-normal text--size--small text--line-height--medium">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
+          </li>
+          <li class="reasons-list__item reason reason--reason-fifth">
+            <div class="reason__content reason__content--without-photo">
+              <h3 class="reason__title reason__title--without-photo text text--weight-bold text--size--medium text--line-height--large">Мало туристов</h3>
+              <span class="reason__num reason__num--without-photo text text--weight-normal text--size--small text--line-height--light">№5</span>
+              <p class="reason__text reason__text--without-photo text text--weight-normal text--size--small text--line-height--medium">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </section>
+    <section class="page-main__hotels-searching hotels-searching">
+      <h3 class="hotels-searching__title text text--weight-bold text--size--large text--line-height--large">Заинтересовались?</h3>
+      <p class="hotels-searching__text text text--weight-normal text--size--small text--line-height--big">
+        Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a class="hotels-searching__button button text text--weight-bold text--size--large text--line-height--large" href="hotels.html">Найти гостиницу</a>
+      <div class="map">
+      </div>
+    </section>
+  </main>
+  <footer class="page__footer page-footer">
+    <span class="page-footer__hashtag-sedona text text--weight-bold text--size--large text--line-height--large">#VISITSEDONA</span>
+    <ul class="page-footer__social-networks social-networks">
+      <li class="social-networks__item"><a class="social-networks__link social-networks__link--twitter" href="https://twitter.com"><span class="visually-hidden">Седона
+                в Твиттере</span></a></li>
+      <li class="social-networks__item"><a class="social-networks__link social-networks__link--fb" href="https://facebook.com"><span class="visually-hidden">Седона
+                в Фэйсбук</span></a></li>
+      <li class="social-networks__item"><a class="social-networks__link social-networks__link--youtube" href="https://youtube.com"><span class="visually-hidden">Седона
+                на Youtube</span></a></li>
+    </ul>
+    <p class="page-footer__powered-by powered-by text text--weight-normal text--size--small text--line-height--large">Разработано
+      <a class="powered-by__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
+  </footer>
+</body>
 </html>
