--- a/source/form.html
+++ b/source/form.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 <body class="page">
   <header class="page__header page-header">
     <nav class="page-header__nav page-header-nav">
@@ -16,114 +13,129 @@
       </a>
       <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
       <ul class="page-header-nav__list site-list site-list--left">
-        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="index.html">Главная</a></li>
-        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="index.html">Главная</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="photo.html">Фото и видео</a></li>
       </ul>
       <ul class="page-header-nav__list site-list site-list--right">
-        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px">Форма отзыва</a></li>
-        <li class="site-list__item"><a class="site-list__item-link text--weight-bold text--size--medium text--line-height--40px" href ="#">html Academy</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge">Форма отзыва</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="#">html Academy</a></li>
       </ul>
     </nav>
   </header>
   <main class="page__form page-form">
-    <h1 class="visually-hidden">Седона</h1>
-      <header class="page-main__header page-main-header">
-        <div class="page-form__promo form-promo">
-          <div class="form-promo__img"></div>
-        </div>
-        <h2 class="form-promo__content text--weight-bold text--size--medium text--line-height--26px">Оставьте свой отзыв</h2>
-        <p class="form-promo__text text--weight-normal text--size--small text--line-height--24px">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
-      </header>
+    <header class="page-form__header page-form-header">
+      <div class="page-form__promo form-promo">
+        <div class="form-promo__img"></div>
+      </div>
+      <h1 class="page-form-header__content text text--weight-bold text--size--medium text--line-height--large">Оставьте свой отзыв</h1>
+      <p class="page-form-header__text text text--weight-normal text--size--small text--line-height--big">
+        Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
+    </header>
     <form class="page-form__form form" action="https://echo.htmlacademy.ru" method="post">
-      <fieldset class="form__personal-datas personal-datas">
-        <legend class="personal-datas__title text--weight-bold text--size--medium text--line-height--26px">Представьтесь:</legend>
-        <p>
-          <label class="personal-datas__label text--weight-normal text--size--small text--line-height--26px" for="firstname">имя:</label>
-          <input class="personal-datas__input personal-datas__input--firstname text--weight-bold text--size--medium text--line-height--26px" type="text" name="firstname" id="firstname" placeholder="Петр"> </p>
-        <p>
-          <label class="personal-datas__label text--weight-normal text--size--small text--line-height--26px" for="lastname">фамилия:</label>
-          <input class="personal-datas__input text--weight-bold text--size--medium text--line-height--26px" type="text" name="lastname" id="lastname" placeholder="Иванов"> </p>
-        <p>
-          <label class="personal-datas__label text--weight-normal text--size--small text--line-height--26px" for="middlename">отчество:</label>
-          <input class="personal-datas__input text--weight-bold text--size--medium text--line-height--26px" type="text" name="middlename" id="middlename" placeholder="Александрович">
-        </p>
-      </fieldset>
-      <fieldset class="form__contact-information contact-information">
-        <legend class="contact-information__title text--weight-bold text--size--medium text--line-height--26px">Контактная информация:</legend>
-        <p>
-          <label class="contact-information__label text--weight-normal text--size--small text--line-height--26px" for="tel">Контактный телефон*:</label>
-          <input class="contact-information__input text--weight-bold text--size--medium text--line-height--26px" type="tel" name="tel" id="tel" placeholder="Введите телефон"> </p>
-        <p>
-          <label class="contact-information__label text--weight-normal text--size--small text--line-height--26px" for="email">Электронная почта*:</label>
-          <input class="contact-information__input text--weight-bold text--size--medium text--line-height--26px" type="email" name="email" id="email" placeholder="Введите e-mail">
-        </p>
-      </fieldset>
-      <fieldset class="form__impression impression">
-        <legend class="impression__title text--weight-bold text--size--medium text--line-height--26px">Ваше общее впечатление</legend>
-        <p>
-          <input class="impression__choice" type=radio name="radio" id="positive" checked>
-          <label class="text--weight-bold text--size--medium text--line-height--26px" for="positive" tabindex="0">Скорее положительное</label></p>
-        <p>
-          <input class="impression__choice" type=radio name="radio" id="negative">
-          <label class="text--weight-bold text--size--medium text--line-height--26px" for="negative" tabindex="0">Скорее отрицательное</label></p>
-        <p>
-          <input class="impression__choice" type=radio name="radio" id="complicated">
-          <label class="text--weight-bold text--size--medium text--line-height--26px" for="complicated" tabindex="0">Затрудняюсь ответить</label></p>
-      </fieldset>
-      <fieldset class="form__landmarks landmarks">
-        <legend class="landmarks__title text--weight-bold text--size--medium text--line-height--26px">Посещенные достопримечательности</legend>
-        <div class="landmarks__checkboxes">
-          <p>
-            <input class="landmarks__choice" type=checkbox name="devilsbridge" id="devilsbridge" checked>
-            <label class="text--weight-bold text--size--medium text--line-height--26px" for="devilsbridge" tabindex="0">Мост Дьявола</label></p>
-          <p>
-            <input class="landmarks__choice" type=checkbox name="mountainbell" id="mountainbell" checked>
-            <label class="text--weight-bold text--size--medium text--line-height--26px" for="mountainbell" tabindex="0">Гора-Колокол</label></p>
-          <p>
-            <input class="landmarks__choice" type=checkbox name="slidepark" id="slidepark" checked>
-            <label class="text--weight-bold text--size--medium text--line-height--26px" for="slidepark" tabindex="0">Слайд-парк</label></p>
-          <p>
-            <input class="landmarks__choice" type=checkbox name="redrocks" id="redrocks">
-            <label class="text--weight-bold text--size--medium text--line-height--26px" for="redrocks" tabindex="0">Красные скалы</label></p>
+      <fieldset class="form__fieldset form__fieldset--personal-data">
+        <legend class="form__legend text text--weight-bold text--size--medium text--line-height--large">Представьтесь:</legend>
+        <div class="form__wrapper">
+          <p class="form__container">
+            <label class="form__label form__label--personal-data text text--weight-normal text--size--small text--line-height--large" for="firstname">имя:</label>
+            <input class="form__input form__input--personal-data form__input--firstname text text--weight-bold text--size--medium text--line-height--large" type="text" name="firstname" id="firstname" placeholder="Петр"> </p>
+          <p class="form__container">
+            <label class="form__label form__label--personal-data text text--weight-normal text--size--small text--line-height--large" for="lastname">фамилия:</label>
+            <input class="form__input form__input--personal-data text text--weight-bold text--size--medium text--line-height--large" type="text" name="lastname" id="lastname" placeholder="Иванов"> </p>
+          <p class="form__container">
+            <label class="form__label form__label--personal-data text text--weight-normal text--size--small text--line-height--large" for="middlename">отчество:</label>
+            <input class="form__input form__input--personal-data text text--weight-bold text--size--medium text--line-height--large" type="text" name="middlename" id="middlename" placeholder="Александрович">
+          </p>
         </div>
       </fieldset>
-      <fieldset class="form__comment comment">
-        <legend class="comment__title text--weight-bold text--size--medium text--line-height--26px">Опишите свои эмоции</legend>
-          <p>
-            <label for="comment"></label>
-            <textarea class="comment__text text--weight-bold text--size--medium text--line-height--26px" name="comment" id="comment" placeholder="Опишите подробно все свои восторги"></textarea></p>
+      <fieldset class="form__fieldset form__fieldset--contact-information">
+        <legend class="form__legend text text--weight-bold text--size--medium text--line-height--large">Контактная информация:</legend>
+        <div class="form__wrapper">
+          <p class="form__container">
+            <label class="form__label form__label--contact-information text text--weight-normal text--size--small text--line-height--large" for="tel">
+              Контактный телефон*:</label>
+            <input class="form__input form__input--contact-information text text--weight-bold text--size--medium text--line-height--large" type="tel" name="tel" id="tel" placeholder="Введите телефон"> </p>
+          <p class="form__container">
+            <label class="form__label form__label--contact-information text text--weight-normal text--size--small text--line-height--large" for="email">
+              Электронная почта*:</label>
+            <input class="form__input form__input--contact-information text text--weight-bold text--size--medium text--line-height--large" type="email" name="email" id="email" placeholder="Введите e-mail">
+          </p>
+        </div>
       </fieldset>
-      <label for="send"></label>
-      <input class="form__button button text--weight-bold text--size--large text--line-height--26px" name="send" id="send" type="submit" value="Отправить отзыв">
+      <fieldset class="form__fieldset form__fieldset--impression">
+        <legend class="form__legend text text--weight-bold text--size--medium text--line-height--large">Ваше общее впечатление</legend>
+        <div class="form__wrapper">
+          <p class="form__container">
+            <input class="form__input form__input--radio" type=radio name="radio" id="positive" checked>
+            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="positive" tabindex="0">
+              Скорее положительное</label></p>
+          <p class="form__container">
+            <input class="form__input form__input--radio" type=radio name="radio" id="negative">
+            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="negative" tabindex="0">
+              Скорее отрицательное</label></p>
+          <p class="form__container">
+            <input class="form__input form__input--radio" type=radio name="radio" id="complicated">
+            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="complicated" tabindex="0">
+              Затрудняюсь ответить</label></p>
+        </div>
+      </fieldset>
+      <fieldset class="form__fieldset form__fieldset--landmarks">
+        <legend class="form__legend text text--weight-bold text--size--medium text--line-height--large">Посещенные достопримечательности</legend>
+        <div class="form__wrapper">
+          <p class="form__container">
+            <input class="form__input form__input--checkbox" type=checkbox name="devilsbridge" id="devilsbridge" checked>
+            <label class="form__label form__label--checkbox text text--weight-bold text--size--medium text--line-height--large" for="devilsbridge" tabindex="0">
+              Мост Дьявола</label></p>
+          <p class="form__container">
+            <input class="form__input form__input--checkbox" type=checkbox name="mountainbell" id="mountainbell" checked>
+            <label class="form__label form__label--checkbox text text--weight-bold text--size--medium text--line-height--large" for="mountainbell" tabindex="0">
+              Гора-Колокол</label></p>
+          <p class="form__container">
+            <input class="form__input form__input--checkbox" type=checkbox name="slidepark" id="slidepark" checked>
+            <label class="form__label form__label--checkbox text text--weight-bold text--size--medium text--line-height--large" for="slidepark" tabindex="0">
+              Слайд-парк</label></p>
+          <p class="form__container">
+            <input class="form__input form__input--checkbox" type=checkbox name="redrocks" id="redrocks">
+            <label class="form__label form__label--checkbox text text--weight-bold text--size--medium text--line-height--large" for="redrocks" tabindex="0">
+              Красные скалы</label></p>
+        </div>
+      </fieldset>
+      <fieldset class="form__fieldset form__fieldset--comment">
+        <legend class="form__legend text text--weight-bold text--size--medium text--line-height--large">Опишите свои эмоции</legend>
+        <p class="form__container">
+          <label class="form__label form__label--comment" for="comment"></label>
+          <textarea class="form__textarea form__textarea--comment text text--weight-bold text--size--medium text--line-height--large" name="comment" id="comment" placeholder="Опишите подробно все свои восторги"></textarea></p>
+      </fieldset>
+      <label class="form__label" for="send"></label>
+      <input class="form__button button text text--weight-bold text--size--large text--line-height--large" name="send" id="send" type="submit" value="Отправить отзыв">
       <span class="form__asterisk">* — обязательные поля</span>
     </form>
   </main>
   <footer class="page__footer page-footer">
-    <span class="page-footer__hashtag-sedona text--weight-bold text--size--large text--line-height--26px">#VISITSEDONA</span>
+    <span class="page-footer__hashtag-sedona text text--weight-bold text--size--large text--line-height--large">#VISITSEDONA</span>
     <ul class="page-footer__social-networks social-networks">
-      <li class="social-networks__item"><a class="social-networks--twitter" href="https://twitter.com"><span class="visually-hidden">Седона
+      <li class="social-networks__item"><a class="social-networks__link social-networks__link--twitter" href="https://twitter.com"><span class="visually-hidden">Седона
             в Твиттере</span></a></li>
-      <li class="social-networks__item"><a class="social-networks--fb" href="https://facebook.com"><span class="visually-hidden">Седона
+      <li class="social-networks__item"><a class="social-networks__link social-networks__link--fb" href="https://facebook.com"><span class="visually-hidden">Седона
             в Фэйсбук</span></a></li>
-      <li class="social-networks__item"><a class="social-networks--youtube" href="https://youtube.com"><span class="visually-hidden">Седона
+      <li class="social-networks__item"><a class="social-networks__link social-networks__link--youtube" href="https://youtube.com"><span class="visually-hidden">Седона
             на Youtube</span></a></li>
     </ul>
-    <p class="page-footer__powered-by powered-by text--weight-normal text--size--small text--line-height--26px">Разработано
+    <p class="page-footer__powered-by powered-by text text--weight-normal text--size--small text--line-height--large">Разработано
       <a class="powered-by__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">htmlacademy.ru</span></a></p>
   </footer>
   <section class="modal-fail">
-      <h2 class="modal-fail__title text--weight-bold text--size--medium text--line-height--26px">Что-то пошло не так!</h2>
-      <p class="modal-fail__text text--weight-normal text--size--small text--line-height--24px">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="modal-fail__button button text--weight-bold text--size--large text--line-height--26px">Ок</button>
+    <h2 class="modal-fail__title text text--weight-bold text--size--medium text--line-height--large">Что-то пошло не так!</h2>
+    <p class="modal-fail__text text text--weight-normal text--size--small text--line-height--big">
+      Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+    <button class="modal-fail__button button text text--weight-bold text--size--large text--line-height--large">Ок</button>
   </section>
   <section class="modal-success">
-      <h2 class="modal-success__title text--weight-bold text--size--medium text--line-height--26px">Ваш отзыв отправлен!</h2>
-      <p class="modal-success__text text--weight-normal text--size--small text--line-height--24px">Спасибо за ваше участие, ваш отзыв уже поступил к нам.
-          В ближайшее время мы опубликуем его на сайте.</p>
-      <div class="modal-success__button-wrapper">
-        <button class="modal-success__button button text--weight-bold text--size--large text--line-height--26px">закрыть окно</button>
-      </div>
+    <h2 class="modal-success__title text text--weight-bold text--size--medium text--line-height--large">Ваш отзыв отправлен!</h2>
+    <p class="modal-success__text text text--weight-normal text--size--small text--line-height--big">
+      Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+    <div class="modal-success__button-wrapper">
+      <button class="modal-success__button button text text--weight-bold text--size--large text--line-height--large">закрыть окно</button>
+    </div>
   </section>
 </body>
-
 </html>
