--- a/source/index.html
+++ b/source/index.html
@@ -55,12 +55,12 @@
             <p class="features__text text text--weight-normal text--size--small text--line-height--medium">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="features__item features__item--souvenir">
-            <h3 class="features__title features__title--souvenir-icon text text--weight-bold text--size--medium text--line-height--large">Сувениры</h3>
+            <h3 class="features__title features__title--souvenir features__title--souvenir-icon text text--weight-bold text--size--medium text--line-height--large">Сувениры</h3>
             <p class="features__text features__text--souvenir text text--weight-normal text--size--small text--line-height--medium">Не только китайского, но и местного производства!</p>
           </li>
           <li class="features__item features__item--eat">
             <h3 class="features__title features__title--burger-icon text text--weight-bold text--size--medium text--line-height--large">Еда</h3>
-            <p class="features__text text text--weight-normal text--size--small text--line-height--medium">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <p class="features__text features__text--eat text text--weight-normal text--size--small text--line-height--medium">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
         </ul>
       </section>
@@ -83,16 +83,16 @@
           </li>
           <li class="reasons-list__item reason reason--reason-fourth">
             <div class="reason__content reason__content--without-photo">
-              <h3 class="reason__title reason__title--without-photo text text--weight-bold text--size--medium text--line-height--large">Красивая дорога</h3>
+              <h3 class="reason__title reason__title--reason-fourth reason__title--without-photo text text--weight-bold text--size--medium text--line-height--large">Красивая дорога</h3>
               <span class="reason__num reason__num--without-photo text text--weight-normal text--size--small text--line-height--light">№4</span>
-              <p class="reason__text reason__text--without-photo text text--weight-normal text--size--small text--line-height--medium">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <p class="reason__text reason__text--reason-fourth reason__text--without-photo text text--weight-normal text--size--small text--line-height--medium">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </li>
           <li class="reasons-list__item reason reason--reason-fifth">
             <div class="reason__content reason__content--without-photo">
-              <h3 class="reason__title reason__title--without-photo text text--weight-bold text--size--medium text--line-height--large">Мало туристов</h3>
-              <span class="reason__num reason__num--without-photo text text--weight-normal text--size--small text--line-height--light">№5</span>
-              <p class="reason__text reason__text--without-photo text text--weight-normal text--size--small text--line-height--medium">Большинство едет в Гранд Каньон и толпится там</p>
+              <h3 class="reason__title reason__title--reason-fifth reason__title--without-photo text text--weight-bold text--size--medium text--line-height--large">Мало туристов</h3>
+              <span class="reason__num reason__num--reason-fifth reason__num--without-photo text text--weight-normal text--size--small text--line-height--light">№5</span>
+              <p class="reason__text reason__text--reason-fifth reason__text--without-photo text text--weight-normal text--size--small text--line-height--medium">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
           </li>
         </ul>
