Активные состояния для элементов

--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
         <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="photo.html">Фото и видео</a></li>
       </ul>
       <ul class="page-header-nav__list site-list site-list--right">
-        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge">Форма отзыва</a></li>
+        <li class="site-list__item"><a class="site-list__item-link site-list__item-link--active text text--weight-bold text--size--medium text--line-height--huge">Форма отзыва</a></li>
         <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="#">html Academy</a></li>
       </ul>
     </nav>
