--- a/source/index.html
+++ b/source/index.html
@@ -8,13 +8,13 @@
 <body class="page">
   <header class="page__header page-header">
     <nav class="page-header__nav page-header-nav">
+      <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
       <a class="page-header__logo logo">
         <div class="logo__image"></div>
       </a>
-      <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
       <ul class="page-header-nav__list site-list site-list--left">
         <li class="site-list__item">
-          <a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge">Главная</a></li>
+          <a class="site-list__item-link site-list__item-link--active text text--weight-bold text--size--medium text--line-height--huge">Главная</a></li>
         <li class="site-list__item">
           <a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="photo.html">Фото и видео</a></li>
       </ul>
