--- a/source/photo.html
+++ b/source/photo.html
@@ -14,7 +14,7 @@
       <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
       <ul class="page-header-nav__list site-list site-list--left">
         <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="index.html">Главная</a></li>
-        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge">Фото и видео</a></li>
+        <li class="site-list__item"><a class="site-list__item-link site-list__item-link--active text text--weight-bold text--size--medium text--line-height--huge">Фото и видео</a></li>
       </ul>
       <ul class="page-header-nav__list site-list site-list--right">
         <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="form.html">Форма отзыва</a></li>
