Ретинизация графики для всех страниц

--- a/source/photo.html
+++ b/source/photo.html
@@ -11,7 +11,7 @@
       <a class="page-header__logo logo">
         <div class="logo__image"></div>
       </a>
-      <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="page-header-nav__list site-list site-list--left">
         <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="index.html">Главная</a></li>
         <li class="site-list__item"><a class="site-list__item-link site-list__item-link--active text text--weight-bold text--size--medium text--line-height--huge">Фото и видео</a></li>
@@ -35,7 +35,7 @@
       <h2 class="visually-hidden">Фотогалерея</h2>
       <figure class="gallery__photo photo photo--top-photo">
         <a class="photo__link">
-          <div class="photo__img photo__img--photo-sunset"></div>
+          <div class="photo__img photo__img--photo-sunset" tabindex="0"></div>
         </a>
         <figcaption class="photo__inscription photo__inscription--top-photo">
           <p class="photo__name text text--weight-bold text--size--small text--line-height--big">Неродные просторы</p>
@@ -45,7 +45,7 @@
       </figure>
       <figure class="gallery__photo photo">
         <a class="photo__link">
-          <div class="photo__img photo__img--photo-cactus"></div>
+          <div class="photo__img photo__img--photo-cactus" tabindex="0"></div>
         </a>
         <figcaption class="photo__inscription">
           <p class="photo__name text text--weight-bold text--size--small text--line-height--big">Местная растительность</p>
@@ -55,7 +55,7 @@
       </figure>
       <figure class="gallery__photo photo">
         <a class="photo__link">
-          <div class="photo__img photo__img--photo-roads"></div>
+          <div class="photo__img photo__img--photo-roads" tabindex="0"></div>
         </a>
         <figcaption class="photo__inscription photo__inscription--left-photo">
           <p class="photo__name text text--weight-bold text--size--small text--line-height--big">Дорога на север</p>
@@ -65,7 +65,7 @@
       </figure>
       <figure class="gallery__photo photo">
         <a class="photo__link">
-          <div class="photo__img photo__img--photo-bridge"></div>
+          <div class="photo__img photo__img--photo-bridge" tabindex="0"></div>
         </a>
         <figcaption class="photo__inscription">
           <p class="photo__name text text--weight-bold text--size--small text--line-height--big">Мост Дьявола</p>
