--- a/source/form.html
+++ b/source/form.html
@@ -11,14 +11,14 @@
       <a class="page-header__logo logo">
         <div class="logo__image"></div>
       </a>
-      <!--<button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>-->
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="page-header-nav__list site-list site-list--left">
-        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="index.html">Главная</a></li>
-        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="index.html" tabindex="1">Главная</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="photo.html" tabindex="2">Фото и видео</a></li>
       </ul>
       <ul class="page-header-nav__list site-list site-list--right">
         <li class="site-list__item"><a class="site-list__item-link site-list__item-link--active text text--weight-bold text--size--medium text--line-height--huge">Форма отзыва</a></li>
-        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="#">html Academy</a></li>
+        <li class="site-list__item"><a class="site-list__item-link text text--weight-bold text--size--medium text--line-height--huge" href="#" tabindex="3">html Academy</a></li>
       </ul>
     </nav>
   </header>
@@ -71,15 +71,15 @@
         <div class="form__wrapper">
           <p class="form__container form__container--impression">
             <input class="form__input form__input--radio" type=radio name="radio" id="positive" checked>
-            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="positive" tabindex="0">
+            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="positive" tabindex="4">
               Скорее положительное</label></p>
           <p class="form__container form__container--impression">
             <input class="form__input form__input--radio" type=radio name="radio" id="negative">
-            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="negative" tabindex="0">
+            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="negative" tabindex="5">
               Скорее отрицательное</label></p>
           <p class="form__container form__container--impression">
             <input class="form__input form__input--radio" type=radio name="radio" id="complicated">
-            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="complicated" tabindex="0">
+            <label class="form__label form__label--radio text text--weight-bold text--size--medium text--line-height--large" for="complicated" tabindex="6">
               Затрудняюсь ответить</label></p>
         </div>
       </fieldset>
