Доработка декоративных элементов

--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="page">
+  <div class="page__wrapper">
     <svg style="display:none">
         <symbol viewBox="0 0 186.643 96.425" id="logo">
             <g id="Layer_2">
@@ -407,5 +408,6 @@
         <button class="modal-success__button button text text--weight-bold text--size--large text--line-height--large">закрыть окно</button>
       </div>
     </section>
+    </div>
   </body>
 </html>
