--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="page">
+  <div class="page__wrapper">
     <svg style="display:none">
     <symbol viewBox="0 0 186.643 96.425" id="logo">
         <g id="Layer_2">
@@ -373,6 +374,9 @@
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="hotels-searching__button button text text--weight-bold text--size--large text--line-height--large" href="hotels.html">Найти гостиницу</a>
         <div class="map">
+          <svg width="27px" height="27px">
+            <use xlink:href="#icon-map-marker"></use>
+          </svg>
         </div>
       </section>
     </main>
@@ -412,5 +416,6 @@
           <span class="visually-hidden">htmlacademy.ru</span></a>
       </p>
     </footer>
+    </div>
   </body>
 </html>
