--- a/source/photo.html
+++ b/source/photo.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="page">
+  <div class="page__wrapper">
     <svg style="display:none">
         <symbol viewBox="0 0 186.643 96.425" id="logo">
             <g id="Layer_2">
@@ -379,5 +380,6 @@
         </a>
       </p>
     </footer>
+  </div>
   </body>
 </html>
