--- a/source/index.html
+++ b/source/index.html
@@ -300,7 +300,17 @@
             <span class="reason__num text text--weight-normal text--size--small text--line-height--light">№1</span>
             <p class="reason__text text text--weight-normal text--size--small text--line-height--medium">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
-          <div class="reason__image reason__image--image-reason-first"></div>
+          <div class="reason__image-wrapper reason__image-wrapper--reason-first">
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="../img/main-city-desktop@1x.webp 1x, ../img/main-city-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="../img/main-city-tablet@1x.webp 1x, ../img/main-city-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="../img/main-city-mobile@1x.webp 1x, ../img/main-city-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1200px)" srcset="../img/main-city-desktop@1x.jpg 1x, ../img/main-city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="../img/main-city-tablet@1x.jpg 1x, ../img/main-city-tablet@2x.jpg 2x">
+              <img class="reason__image reason__image--image-reason-first" src="../img/main-city-mobile@1x.jpg" srcset="../img/main-city-mobile@2x.jpg 2x" alt="Фото Седона">
+            </picture>
+          </div>
         </section>
         <section class="features">
           <h2 class="visually-hidden">Особенности</h2>
@@ -340,7 +350,17 @@
             <div class="reason__num text text--weight-normal text--size--small text--line-height--light">№2</div>
             <p class="reason__text reason__text--reason-second text text--weight-normal text--size--small text--line-height--medium">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </div>
-          <div class="reason__image reason__image--image-reason-second"></div>
+          <div class="reason__image-wrapper reason__image-wrapper--reason-second">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="../img/photo-bridge-desktop@1x.webp 1x, ../img/photo-bridge-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-bridge-tablet@1x.webp 1x, ../img/photo-bridge-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="../img/photo-bridge-mobile@1x.webp 1x, ../img/photo-bridge-mobile@2x.webp 2x">
+
+                <source media="(min-width: 1200px)" srcset="../img/photo-bridge-desktop@1x.jpg 1x, ../img/photo-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="../img/photo-bridge-tablet@1x.jpg 1x, ../img/photo-bridge-tablet@2x.jpg 2x">
+                <img class="reason__image reason__image--image-reason-second" src="../img/photo-bridge-mobile@1x.jpg" srcset="../img/photo-bridge-mobile@2x.jpg 2x" alt="Фото Мост Дьявола">
+              </picture>
+            </div>
         </section>
         <section class="page-main-content__reasons-without-photo reasons-without-photo">
           <ul class="reasons-without-photo__list reasons-list">
@@ -374,6 +394,15 @@
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="hotels-searching__button button text text--weight-bold text--size--large text--line-height--large" href="hotels.html">Найти гостиницу</a>
         <div class="map">
+            <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="../img/bg-map-desktop@1x.webp 1x, ../img/bg-map-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.webp 1x, ../img/bg-map-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/bg-map-mobile@1x.webp, ../img/bg-map-mobile@2x.webp 2x">
+
+                <source media="(min-width: 1200px)" srcset="../img/bg-map-desktop@1x.jpg 1x, ../img/bg-map-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.jpg 1x, ../img/bg-map-tablet@2x.jpg 2x">
+                <img class="map" src="../img/bg-map-mobile@1x.jpg" srcset="../img/bg-map-mobile@2x.jpg 2x" alt="Карта">
+              </picture>
           <svg width="27px" height="27px">
             <use xlink:href="#icon-map-marker"></use>
           </svg>
